Fix facet left spacing

--- a/app/styles/ember-frost-bunsen/frost-object-browser-facets.scss
+++ b/app/styles/ember-frost-bunsen/frost-object-browser-facets.scss
@@ -27,8 +27,11 @@
       padding-right: 0;
       text-align: left;
 
-      h3 {
+      .frost-bunsen-toggle-handle + h3 {
         margin-left: 10px;
+      }
+
+      h3 {
         color: $frost-color-night-1;
         font-size: 14px;
         font-weight: bold;
